--- a/src/assets/style/common.css
+++ b/src/assets/style/common.css
@@ -22,11 +22,14 @@ input::-webkit-search-cancel-button {
     appearance: none;
     -webkit-appearance: none;
   }
-  body {
+  html,body {
     background-color: #fff;
-  }
-  
-  
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    height: 100%;
+    width: 100%;
+  }  
   
   /* 文字溢出隐藏 */
   .text-overflow {
